--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,13 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "build": "npx tsc --b"
+  },
   "dependencies": {
+    "express": "^4.18.3",
+    "socket.io": "^4.7.4",
     "typescript": "^5.4.2"
   }
 }
